--- a/.env.pipelines
+++ b/.env.pipelines
@@ -2,6 +2,6 @@ APP_ENV=local
 APP_KEY=ThisIsThe32CharacterKeySecureKey
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=mtva-test
+DB_DATABASE=test-db
 DB_USERNAME=homestead
 DB_PASSWORD=secret
